<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, MainScreen!</string>
    <string name="app_name">Bravo7</string>
    <string name="send_delay">1</string>
    <string name="refresh_delay">60</string>
    <string name="error_delay">10</string>
    <string name="location_timeout">5</string>
    <string name="location_accuracy">50</string>
    <string name="cron_days">1</string>
    <string name="lv_widget"></string>
</resources>
